<resources>
    <string name="app_name">Foodesto</string>
    <string name="home_statistics_label">Statistics</string>
    <string name="home_scan_label">Scan</string>
    <string name="home_cart_purchase">Purchase</string>
    <string name="propertie_fat">Fat</string>
    <string name="propertie_salt">Salt</string>
    <string name="propertie_fiber">Fiber</string>
    <string name="propertie_sugar">Sugar</string>
    <string name="propertie_energy">Energy</string>
    <string name="propertie_proteins">Proteins</string>
    <string name="propertie_carbohydrate">Carbohydrate</string>
    <string name="product_properties">Product properties</string>
    <string name="propertie_unit">100ml/100g</string>
    <string name="product_additives_label">Product additives</string>
    <string name="bio">BIO Product</string>
    <string name="additives">This product contain additives</string>
    <string name="add_product">Add</string>
    <string name="delete">Delete</string>
    <string name="bad">Bad</string>
    <string name="grade_e">E</string>
    <string name="grade_mediocre">Mediocre</string>
    <string name="grade_d">D</string>
    <string name="grade_low_impact">Low impact</string>
    <string name="grade_c">C</string>
    <string name="grade_good">Good</string>
    <string name="grade_b">B</string>
    <string name="grade_very_good">Very good</string>
    <string name="grade_a">A</string>
    <string name="no_product_error">Sorry, no product available!</string>
    <string name="application_name">Foodesto</string>
    <string name="product_details_title">Product details</string>
    <string name="no_product_widget">Scan your first product</string>
    <string name="snack_product_added">Product is added</string>
    <string name="scan_new_product">Scan new product</string>
    <string name="product_image">product_image</string>
    <string name="add_product_to_chart">add product to purchase chart</string>
    <string name="product_statistics_title">Products Statistics</string>
    <string name="purchace_quality">Purchases quality</string>
    <string name="additivs_list">Additives list</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="error_fail_get_product">Fail to get product</string>
</resources>
