<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="96dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:elevation="6dp"
            app:cardCornerRadius="4dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/product_image_view"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/product_image_view"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/product_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/product_title"
                    app:layout_constraintTop_toBottomOf="@+id/product_title"
                    tools:text="SubTitle" />

                <Button
                    android:id="@+id/add_button"
                    style="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@drawable/bg_rounded_orange"
                    android:drawableEnd="@drawable/ic_shopping_basket"
                    android:elevation="@dimen/elevation"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/margin_medium"
                    android:text="@string/add_product"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_subtitle" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <include layout="@layout/spacer_horizontal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:id="@+id/product_properties_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/horizontal_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/product_properties_label"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_large"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/product_properties"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/propertie_unit"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <include layout="@layout/spacer_horizontal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:id="@+id/product_additives_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/horizontal_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/product_additives_label"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_large"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@string/product_additives_label"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <include layout="@layout/spacer_horizontal" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>